[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.26.0"
# database
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-actix-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
# 日志添加
tracing = "0.1"
api-lib = { path = "../lib" }

# 静态文件
actix-files = "0.6.2"
shuttle-static-folder = "0.21.0"

